fix: more header padding alignment fixes

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -7,7 +7,7 @@
     max-width: 75rem;
     height: 100%;
     margin: auto;
-    padding: 0 5px;
+    padding: 0 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,7 +24,7 @@ nav {
   justify-content: space-between;
   position: relative;
   z-index: 3;
-  padding: 20px;
+  padding-left: 20px;
 }
 
 .fas {
@@ -79,7 +79,6 @@ nav {
     margin-left: 10px;
   }
   .menu-icon {
-    margin-right: 4px;
     display: block;
   }
   .menu-list {
